<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card2"
        android:layout_width="170dp"
        android:layout_height="170dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="120dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        android:clickable="true"
        app:rippleColor="#A8C0EC">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/skill_learn"
            android:clickable="true">


            <!-- Title, secondary and supporting text -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:contentDescription="@string/dashboard_test"
                android:scaleType="centerCrop"

                app:srcCompat="@drawable/ic__villageclass_64dp" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:gravity="center"

                    android:text="@string/village_school"

                    android:textAppearance="?attr/textAppearanceHeadline6"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        android:clickable="true"
        app:rippleColor="#A8C0EC">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/home_hall"
            android:clickable="true">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:contentDescription="@string/dashboard_test"
                android:scaleType="centerCrop"

                app:srcCompat="@drawable/ic_home_hall_64dp" />

            <!-- Title, secondary and supporting text -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:gravity="center"

                android:text="@string/office_hall"

                android:textAppearance="?attr/textAppearanceHeadline6"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card3"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="290dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        android:clickable="true"
        app:rippleColor="#A8C0EC">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/village_buy"
            android:clickable="true">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:contentDescription="@string/dashboard_test"
                android:scaleType="centerCrop"

                app:srcCompat="@drawable/ic_shopping_64dp" />



            <!-- Title, secondary and supporting text -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:gravity="center"

                android:text="@string/village_taobao"

                android:textAppearance="?attr/textAppearanceHeadline6"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card4"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="310dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        android:clickable="true"
        app:rippleColor="#A8C0EC">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/comment_community"
            android:clickable="true">


            <!-- Title, secondary and supporting text -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:contentDescription="@string/dashboard_test"
                android:scaleType="centerCrop"

                app:srcCompat="@drawable/ic_community_64dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:gravity="center"

                android:text="@string/community"

                android:textAppearance="?attr/textAppearanceHeadline6"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>






</androidx.constraintlayout.widget.ConstraintLayout>